--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run start",
+    "start": "node index.js",
     "start:dev": "nodemon start"
   },
   "repository": {
