--- a/.gitignore
+++ b/.gitignore
@@ -93,7 +93,12 @@ dist
 
 # vuepress build output
 .vuepress/dist
-
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 # vuepress v2.x temp and cache directory
 .temp
 .cache
