--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
     "node-telegram-bot-api": "^0.63.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "vercel": "^32.3.1"
   }
 }
