--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,14 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/index.js"
+        "src": "/",
+        "dest": "./index.js"
       }
-    ]
+    ],
+    "env": {
+          "TOKEN": "6624422784:AAHbG8qhJ9qYlRxIq4O7wAj8W-EFD_x0eUY",
+          "LINK": "mongodb+srv://Karavang:retro212121@cluster0.3wuvphi.mongodb.net/Warden?retryWrites=true&w=majority"
+    }
+      
+    
   }
