--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "node-telegram-bot-api": "^0.63.0",
     "nodemon": "^3.0.1",
     "vercel": "^32.3.1"
+  },
+  "devDependencies": {
+    "ngrok": "^5.0.0-beta.2"
   }
 }
